--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>Invalid URL!</title>
   </head>
   <body>
-    <p>Short URL is invalid! (Or you have been spamming the site too much)</p>
+    <p>GG了XDM</p>
     <p>
-      <a href="https://github.com/nelsontky/gh-pages-url-shortener">
-        Learn more about this URL shortener
+      <a href="https://google.com">
+        Try this instead!!
       </a>
     </p>
   </body>
