--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <body>
     <div class="warp">
         <div class="user-warp">
-            <img src="./nmsl.gif" alt="nmsl.gif">
+            <img src="./preston.gif" alt="preston.gif">
             <p class="font-hei">伟大领袖说过，先富带动后富。大家带动一下我...</p>
         </div>
         <div class="pay-warp">
