--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>国际要饭网</title>
+    <title>普莱斯顿国际要饭网</title>
     <meta name="viewport" content="width=device-width, initial-scale=0.9">
     <link rel="stylesheet" type="text/css" href="./fonts.css" />
     <style>
@@ -102,7 +102,7 @@
     <div class="warp">
         <div class="user-warp">
             <img src="./preston.gif" alt="preston.gif">
-            <p class="font-hei">伟大领袖说过，先富带动后富。大家带动一下我...</p>
+            <p class="font-hei">伟大领袖说过，先富带动后富,所以大家带动一下我...</p>
         </div>
         <div class="pay-warp">
             <div class="qr-warp">
